--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build and push Docker Image
-        run: docker build -t Shortvision-DockerBase .
+        run: docker build -t shortvision-dockerbase .
 
       - name: Push To GH Package
         uses: docker/build-push-action@v1
@@ -21,5 +21,5 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: docker.pkg.github.com
-          repository: univ-smb-m1-isc-2022/Shortvision-DockerBase/main
+          repository: univ-smb-m1-isc-2022/shortvision-dockerbase/main
           tags: latest
